# predictive-maintenance

./: .gitignore  README.md  pyproject.toml  requirements.txt
api/: main.py
dashboard/: README.md  __init__.py  app.py  machine_config.py  shared.py
dashboard/components/: __init__.py  charts.py  data_loaders.py  layout.py  machine_view.py  navigation.py  styles.py
dashboard/pages/: 1_Project_Overview.py  2_Machine_View.py  3_Model_Results.py  4_Predictions.py
docs/: data-sources.md  project-plan.md
experiments/: run_ai4i_random_forest.py  run_ai4i_xgboost.py  run_lstm_fd001.py  run_lstm_fd001_test_evaluation.py  run_model_comparison.py  run_nasa_cmapss_preprocessing.py
experiments/ai4i_random_forest/: metrics.json  summary.txt  top_feature_importances.csv
experiments/ai4i_xgboost/: metrics.json  summary.txt  top_feature_importances.csv
experiments/nasa_fd001_lstm/: training_config.json  training_history.json
notebooks/: 01_ai4i_eda.ipynb
scripts/: download_datasets.ps1
src/: __init__.py  data_preprocessing.py  evaluate.py  evaluate_lstm_fd001_test.py  generate_dataset_analysis.py  nasa_cmapss_preprocessing.py  predict.py  train_lstm_fd001.py  train_random_forest.py  train_xgboost.py
src/predictive_maintenance/: __init__.py  config.py  experiments.py
tests/: test_ai4i_data.py  test_config.py  test_dashboard_smoke.py  test_datasets.py  test_lstm_fd001_pipeline.py  test_lstm_fd001_test_evaluation.py  test_model_comparison.py  test_nasa_cmapss_preprocessing.py  test_random_forest_pipeline.py  test_xgboost_pipeline.py
(+10 files in other folders)
