[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "predictive-maintenance"
version = "0.1.0"
description = "Machine learning pipeline for predictive maintenance with industrial sensor data."
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
